# my_flet_app

./: README.md  pyproject.toml
src/: main.py
src/controllers/: search_controller.py
src/views/: banner.py  home_view.py
