[project]
name = "my-flet-app"
version = "0.1.0"
description = "App de estudos do framework Flet"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Marcos Serra", email = "devmarcosserra@gmail.com" }
]
dependencies = [
  "flet==0.27.6"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.codingsolutions"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "my-flet-app"

# company name to display in about app dialogs
company = "Coding Solutions"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Coding Solutions"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}